--- a/leaflet_openstreet/leaflet_openstreet/wwwroot/index.html
+++ b/leaflet_openstreet/leaflet_openstreet/wwwroot/index.html
@@ -11,6 +11,8 @@
     <link href="leaflet_openstreet.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <!--Add draw plugin -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw-src.css" rel='stylesheet' crossorigin='' />
 </head>
 
 <body>
@@ -29,6 +31,9 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <!--Add draw plugin -->
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js ></script>
+
 </body>
 
 </html>
